--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     container_name: grlc
     hostname: grlc 
     build: .
+    environment:
+      - "GRLC_GITHUB_ACCESS_TOKEN"
     ports:
       - 9050:80
     networks:
